--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/quote_background_gradient">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Quotify"
+        android:gravity="center_horizontal"
+        style="@style/TextAppearance.AppCompat.Display1"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/black"
+        />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview_quote"
@@ -62,6 +73,39 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="15dp"
        android:layout_marginTop="-35dp"
-        android:src="@drawable/ic_share" />
+        android:src="@drawable/ic_share"
+        android:onClick="onShare"/>
 
+    <TextView
+        android:id="@+id/txt_previous"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Previous"
+        android:drawableLeft="@drawable/ic_left_size_arrow"
+        android:drawablePadding="5dp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:onClick="onPrevious"
+        />
+
+    <TextView
+        android:id="@+id/txt_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        android:drawableRight="@drawable/ic_right_side_arrow"
+        android:drawablePadding="5dp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:gravity="center_vertical"
+        android:onClick="onNext"
+        />
 </RelativeLayout>
